--- a/Project 1- Google Homepage/index.html
+++ b/Project 1- Google Homepage/index.html
@@ -9,52 +9,74 @@
   </head>
   <body>
     <header>
-      <a href="#">Gmail</a>
-      <a href="#">Images</a>
-      <a href="#">Apps Logo</a>
-      <a href="#">Profile</a>
+      <nav>
+        <ul class="nav_list">
+          <li><a href="#">Gmail</a></li>
+          <li><a href="#">Images</a></li>
+          <li>
+            <div class="nav1">
+              <a href="#"
+                ><img src="./images/apps.png" alt="apps" id="apps"
+              /></a>
+            </div>
+          </li>
+          <li>
+            <div class="nav2">
+              <a href="#"
+                ><img src="./images/profile.jpg" alt="profile" id="profile"
+              /></a>
+            </div>
+          </li>
+        </ul>
+      </nav>
     </header>
-
-    <div class="img_container">
-      <img src="./images/google.png" alt="Google Logo" />
-    </div>
-    <div class="searchbar">
-      <input type="text" />
-    </div>
-    <div class="search">
-      <a href="#" class="gsearch">Google Search</a>
-      <a href="#" class="doodle">I'm Feeling Lucky</a>
-    </div>
-    <div class="covid_container">
-      <a href="#" class="covid">Get COVID-19 facts from top health officials</a>
-    </div>
-    <div class="lang_container">
-      Google offered in:
-      <a href="#" class="lang">Hindi</a>
-      <a href="#" class="lang">Bangla</a>
-      <a href="#" class="lang">Telugu</a>
-      <a href="#" class="lang">Marathi</a>
-      <a href="#" class="lang">Kannada</a>
-      <a href="#" class="lang">Gujarati</a>
-      <a href="#" class="lang">Punjabi</a>
-      <a href="#" class="lang">Malyali</a>
-      <a href="#" class="lang">Tamil</a>
-    </div>
-
+    <main>
+      <div class="container"></div>
+      <div class="img_container">
+        <img src="./images/google.png" alt="Google Logo" />
+      </div>
+      <div class="searchbar">
+        <img src="./images/search.png" alt="search_icon" id="search_icon" />
+        <input class="search_text" type="text" />
+      </div>
+      <div class="search">
+        <a id="search1" href="#" class="gsearch">Google Search</a>
+        <a id="search2" href="#" class="doodle">I'm Feeling Lucky</a>
+      </div>
+      <div class="covid_container">
+        <a href="#" class="covid"
+          >Get COVID-19 facts from top health officials</a
+        >
+      </div>
+      <div class="lang_container">
+        Google offered in:
+        <a href="#" class="lang">Hindi</a>
+        <a href="#" class="lang">Bangla</a>
+        <a href="#" class="lang">Telugu</a>
+        <a href="#" class="lang">Marathi</a>
+        <a href="#" class="lang">Kannada</a>
+        <a href="#" class="lang">Gujarati</a>
+        <a href="#" class="lang">Punjabi</a>
+        <a href="#" class="lang">Malyali</a>
+        <a href="#" class="lang">Tamil</a>
+      </div>
+    </main>
     <footer>
       <div class="f1_container">
         <p class="f1">India</p>
       </div>
       <div class="f2_container">
-        <a href="#" class="f2">About</a>
-        <a href="#" class="f2">Advertising</a>
-        <a href="#" class="f2">Business</a>
-        <a href="#" class="f2">How Search works</a>
-      </div>
-      <div class="f3_container">
-        <a href="#" class="f3">Privacy</a>
-        <a href="#" class="f3">Terms</a>
-        <a href="#" class="f3">Settings</a>
+        <div class="f2_1">
+          <a href="#" class="f2">About</a>
+          <a href="#" class="f2">Advertising</a>
+          <a href="#" class="f2">Business</a>
+          <a href="#" class="f2">How Search works</a>
+        </div>
+        <div class="f2_1">
+          <a href="#" class="f3">Privacy</a>
+          <a href="#" class="f3">Terms</a>
+          <a href="#" class="f3">Settings</a>
+        </div>
       </div>
     </footer>
   </body>
