--- a/Project 1- Google Homepage/index.html
+++ b/Project 1- Google Homepage/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./images/title.png" type="image/icon type" class="title_image" />
     <title>Google</title>
   </head>
   <body>
@@ -47,18 +48,19 @@
         <a href="#" class="covid"
           >Get COVID-19 facts from top health officials</a
         >
+        >
       </div>
       <div class="lang_container">
         Google offered in:
-        <a href="#" class="lang">Hindi</a>
-        <a href="#" class="lang">Bangla</a>
-        <a href="#" class="lang">Telugu</a>
-        <a href="#" class="lang">Marathi</a>
-        <a href="#" class="lang">Kannada</a>
-        <a href="#" class="lang">Gujarati</a>
-        <a href="#" class="lang">Punjabi</a>
-        <a href="#" class="lang">Malyali</a>
-        <a href="#" class="lang">Tamil</a>
+        <a href="#" class="lang">हिन्दी</a>
+        <a href="#" class="lang">বাংলা</a>
+        <a href="#" class="lang">తెలుగు</a>
+        <a href="#" class="lang">मराठी</a>
+        <a href="#" class="lang">தமிழ்</a>
+        <a href="#" class="lang">ગુજરાતી</a>
+        <a href="#" class="lang">ಕನ್ನಡ</a>
+        <a href="#" class="lang">മലയാളം</a>
+        <a href="#" class="lang">ਪੰਜਾਬੀ</a>
       </div>
     </main>
     <footer>
