--- a/javascript_fundamentals/rock-paper-scissors/index.html
+++ b/javascript_fundamentals/rock-paper-scissors/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Rock Paper Scissors</h1>
+    <p>Please go to the console and type game() to start playing</p>
     <script src="./external.js"></script>
   </body>
 </html>
