some of JS functions done

--- a/javascript_fundamentals/calculator/index.html
+++ b/javascript_fundamentals/calculator/index.html
@@ -24,7 +24,7 @@
         <button id="two" value="2">2</button>
         <button id="three" value="3">3</button>
         <button id="minus" value="minus">-</button>
-        <button id="decimal" value="decimal">.</button>
+        <button id="decimal" value=".">.</button>
         <button id="zero" value="0">0</button>
         <button id="divide" value="divide">/</button>
         <button id="multiply" value="multiply">x</button>
