looks complete, will update incase of bugs

--- a/javascript_fundamentals/calculator/index.html
+++ b/javascript_fundamentals/calculator/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="body">
       <h3>Synister</h3>
-      <div class="display"></div>
+      <div class="display" id="displaybox"></div>
       <div class="buttons">
         <button id="seven" value="7">7</button>
         <button id="eight" value="8">8</button>
