--- a/javascript_projects/to-do list/src/static/template.html
+++ b/javascript_projects/to-do list/src/static/template.html
@@ -5,6 +5,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <main id="content" class="background"></main>
+    <main id="content" class="background">
+    </main>
   </body>
 </html>
