--- a/javascript_projects/to-do list/src/static/template.html
+++ b/javascript_projects/to-do list/src/static/template.html
@@ -7,22 +7,22 @@
   <body>
     <main id="content" class="background">
     </main>
-    <div class="bg-modal project-modal-container" id="projectForm">
+    <div class="bg-modal project-modal-container">
       <div class="modal-content project-modal">
         <div class="close" id="projectFormClose">+</div>
-        <form id="projectForm">
+        <form action="" id="projectForm">
           <div class="form-element">
             <h2 class="label project-name">Project Name</h2>
             <input id="projectName" type="text" />
           </div>
-          <div class="form-element"><a href="#" class="btn">Submit</a></div>
+          <div class="form-element"><a href="#" class="btn" id="projectAdder">Add Project</a></div>
         </form>
       </div>
     </div>
-    <div class="bg-modal to-do-modal-container" id="toDoForm">
+    <div class="bg-modal to-do-modal-container">
       <div class="modal-content to-do-modal">
         <div class="close" id="toDoFormClose">+</div>
-        <form id="toDoForm">
+        <form action="" id="toDoForm">
           <div class="form-element">
             <h2 class="label">Title</h2>
             <input id="toDoName" type="text" />
@@ -68,7 +68,7 @@
             <input type="date" name="date" id="date" />
           </div>
           <div class="form-element">
-            <a href="#" class="btn">Submit</a>
+            <a href="#" class="btn" id="toDoAdder">Submit</a>
           </div>
         </form>
       </div>
