basic layout done

--- a/javascript_projects/weather-app/src/static/template.html
+++ b/javascript_projects/weather-app/src/static/template.html
@@ -24,8 +24,15 @@
           <a href="#" class="search-btn flex"><i class="fas fa-search"></i></a>
         </div>
       </header>
-      <main></main>
-      <footer></footer>
+      <main class="flex">
+        <div class="container card flex"></div>
+        <div class="container forecast flex"></div>
+      </main>
+      <footer class="container">
+          <h3>
+            &copy; Nipun Tewari | The Odin Project
+          </h3>
+      </footer>
     </div>
   </body>
 </html>
