need to resolve fetch

--- a/javascript_projects/weather-app/src/static/template.html
+++ b/javascript_projects/weather-app/src/static/template.html
@@ -21,11 +21,15 @@
             class="search-text"
             placeholder="Enter Your City"
           />
-          <a href="#" class="search-btn flex"><i class="fas fa-search"></i></a>
+          <a href="#" id="searchButton" class="search-btn flex"><i class="fas fa-search"></i></a>
         </div>
       </header>
       <main class="flex">
-        <div class="container card flex"></div>
+        <div class="container card flex">
+          <div id="temperature" class="temp-div">
+
+          </div>
+        </div>
         <div class="container forecast flex"></div>
       </main>
       <footer class="container">
