only function to change units left

--- a/javascript_projects/weather-app/src/static/template.html
+++ b/javascript_projects/weather-app/src/static/template.html
@@ -21,21 +21,31 @@
             class="search-text"
             placeholder="Enter Your City"
           />
-          <a href="#" id="searchButton" class="search-btn flex"><i class="fas fa-search"></i></a>
+          <a href="#" id="searchButton" class="search-btn flex"
+            ><i class="fas fa-search"></i
+          ></a>
         </div>
       </header>
       <main class="flex">
         <div class="container card flex">
-          <div id="temperature" class="temp-div">
-
+          <div id="weather" class="weather-div flex">
+            <h2 class="city">Weather in TBD</h2>
+            <h1 class="temp">TBD°C</h1>
+            <div class="flex">
+              <img
+                src="https://http://openweathermap.org/img/wn/03n.png"
+                alt=""
+                class="icon"
+              />
+              <div class="description">TBD</div>
+            </div>
+            <div class="humidity">Humidity: TBD%</div>
+            <div class="wind">Wind Speed: TBD km/h</div>
           </div>
         </div>
-        <div class="container forecast flex"></div>
       </main>
       <footer class="container">
-          <h3>
-            &copy; Nipun Tewari | The Odin Project
-          </h3>
+        <h3>&copy; Nipun Tewari | The Odin Project</h3>
       </footer>
     </div>
   </body>
